[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/m12.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Engine/Creditos.gd" type="Script" id=2]
[ext_resource path="res://fonts/UI_Font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Creditos" type="ColorRect"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="."]
margin_top = 25.0
margin_right = 1024.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 920.0
margin_top = 580.0
margin_right = 1028.0
margin_bottom = 602.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.690196, 0.690196, 0.690196, 1 )
text = "Voltar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterTimer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true
autostart = true

[node name="Creditos" type="Label" parent="."]
margin_left = 434.182
margin_top = 5.66325
margin_right = 558.182
margin_bottom = 25.6633
custom_fonts/font = ExtResource( 3 )
text = "CREDITOS"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="LetterTimer" to="." method="_on_LetterTimer_timeout"]
